--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "personal-portfolio",
   "version": "0.1.0",
+  "homepage": "https://robiulhr.github.io/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.4.1",
@@ -16,12 +17,14 @@
     "react-intersection-observer": "^8.32.1",
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typed.js": "^2.0.12",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
