--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "personal-portfolio",
     "version": "0.1.0",
-    "homepage": "https://robiulhr.github.io/",
+    "homepage": "https://robiul.dev/",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.9.3",
@@ -27,8 +27,6 @@
         "react-scripts": "^2.1.3"
     },
     "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -b master -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
