--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-tilty": "^2.0.3",
         "react-tsparticles": "^2.1.3",
         "styled-components": "^5.3.5",
+        "tsparticles": "^2.9.3",
         "typed.js": "^2.0.12",
         "web-vitals": "^1.0.1"
     },
@@ -29,7 +30,7 @@
     "scripts": {
         "predeploy": "npm run build",
         "deploy": "gh-pages -b master -d build",
-        "start": "react-scripts start",
+        "start": "react-scripts --openssl-legacy-provider start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
