--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "personal-portfolio",
-    "version": "0.2.0",
+    "version": "0.4.0",
     "homepage": "https://robiulhr.github.io/",
     "private": true,
     "dependencies": {
@@ -29,9 +29,9 @@
     },
     "scripts": {
         "predeploy": "npm run build",
-        "deploy": "gh-pages -b master -d build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts --openssl-legacy-provider start",
-        "build": "react-scripts build",
+        "build": "react-scripts --openssl-legacy-provider build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
